--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
+    "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@supabase/supabase-js": "^2.39.8",
     "expo": "^54.0.0",
     "expo-asset": "~12.0.12",
+    "expo-constants": "~18.0.12",
     "expo-font": "~14.0.10",
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
